-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.0-beta1
-
None
-
MSVC, Windows
-
f42fff76971299b933539747b59a213712b644b9
When opening a text editor, Qt Creator emits this runtime error/warning
QObject::connect: signal not found in Core::BaseTextFind
The reason is the connect in the BaseTextEditorWidgetPrivate constructor:
connect(baseTextFind, &BaseTextFind::highlightAll,
this, &BaseTextEditorWidgetPrivate::highlightSearchResultsSlot);
Not sure how to fix this without breaking other things.
- relates to
-
QTBUG-41004 New connect syntax fails with msvc in special corner cases
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-12922 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 93465,2 | Find: Avoid virtual signals | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |