Find: Avoid virtual signals

Very unusual construct...

Task-number: QTCREATORBUG-12922
Change-Id: Ia7c3a3c2520ed53fdb83d91b50a0a6737f87d4f6
Reviewed-by: Eike Ziller <eike.ziller@digia.com>